# image-editing-mask

./: .gitignore  pyproject.toml  readme.md
scripts/: calculate_editing_metrics.py  calculate_segmentation_metrics.py  edit_pie.py  generate_masks_pie.py  parse_pie.py
src/: attn_based.py  common_utils.py  editing.py  metrics_calculator.py  noise_based.py  ours.py  patcher.py
src/turbo-edit/: main.py  requirements.txt  utils.py
