[build-system]
requires = ["setuptools>=64", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
tag_formatter = "(v)?(?P<tag>(\\d+.)*\\d+)(-.+)?"

[tool.setuptools]
packages = [
    "image_editing_mask",
    "image_editing_mask.turbo_edit"
]

[tool.setuptools.package-dir]
"image_editing_mask" = "src"
"image_editing_mask.turbo_edit" = "src/turbo-edit"

[project]
name = "image_editing_mask"
authors = [
    {name = "Maksim Semenov", email = "erasedwalt@gmail.com"}
]
description = "Image Editing Mask"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
]
requires-python = ">= 3.10"
dynamic = ["version"]
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "accelerate==1.4.0",
    "diffusers==0.33.0",
    "transformers==4.49.0",
    "torchmetrics==1.6.2",
    "PyYAML==6.0.2",
    "tqdm==4.67.1",
    "Pillow==11.1.0",
    "ml_collections==1.0.0",
    "json-with-comments==1.2.10",
]
